force-app/main/default/objects/Resume_Entry__c/fields/AI_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggestion__c</fullName>
    <description>Stores the specific &quot;fix&quot; suggested for this entry.</description>
    <label>AI Suggestion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>