force-app/main/default/objects/Resume_Entry__c/fields/Description_Rich__c.field-meta.xml
<CustomField>
    <fullName>Description_Rich__c</fullName>
    <description>The bullet points (supports bold, lists).</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>