force-app/main/default/objects/Resume_Entry__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Month/Year of end.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>