force-app/main/default/objects/Resume_Entry__c/fields/Is_Current__c.field-meta.xml
<CustomField>
    <fullName>Is_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, UI displays &quot;Present&quot; instead of End Date.</description>
    <label>Is Current</label>
    <type>Checkbox</type>
</CustomField>