force-app/main/default/objects/Resume_Entry__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>Company name or School name.</description>
    <label>Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>