force-app/main/default/objects/Resume_Entry__c/fields/Resume_Section__c.field-meta.xml
<CustomField>
    <fullName>Resume_Section__c</fullName>
    <description>Links to the parent Section record.</description>
    <label>Resume Section</label>
    <referenceTo>Resume_Section__c</referenceTo>
    <relationshipLabel>Resume Entries</relationshipLabel>
    <relationshipName>Resume_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>