force-app/main/default/objects/Resume_Entry__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Month/Year of start.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>