force-app/main/default/objects/Resume_Entry__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Job Title or Degree Name.</description>
    <label>Title/Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>